--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-spring.datasource.url=
-spring.datasource.username=
-spring.datasource.password=
-telegram.bot.token=
+spring.datasource.url=jdbc:postgresql://localhost:5432/Petbot_group5
+spring.datasource.username=group5_petbot
+spring.datasource.password=group5
+spring.jpa.hibernate.ddl-auto=validate
+spring.liquibase.change-log=classpath:database/changelog/changelog-master.yml
+
