Большая часть Фазы 1, часть Фазы 2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,5 @@ spring.datasource.username=group5_petbot
 spring.datasource.password=group5
 spring.jpa.hibernate.ddl-auto=validate
 spring.liquibase.change-log=classpath:database/changelog/changelog-master.yml
+path.to.petavatars.folder= /avatars
 
