Основной код практически закончен, но не получается присвоить номер усыновителя (adopter) питомцу (pet) - выскакивает LazyInitializationException

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/Petbot_group5
 spring.datasource.username=group5_petbot
 spring.datasource.password=group5
 spring.jpa.hibernate.ddl-auto=validate
-spring.liquibase.change-log=classpath:database/changelog/changelog-master.yml
+spring.liquibase.change-log=classpath:database/changelog/changelog-master.yaml
 path.to.petavatars.folder= /avatars
 
