Закончены основные тесты

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,6 @@ spring.datasource.password=group5
 spring.jpa.hibernate.ddl-auto=validate
 spring.liquibase.change-log=classpath:database/changelog/changelog-master.yaml
 path.to.petavatars.folder= /avatars
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+
 
